# kitecli

./: .gitignore  ORDERS.md  README.md  pyproject.toml
.agents/: AGENTS.md
cli/: __init__.py  api_client.py  base_manager.py  config.py  display.py  executor.py  kite_manager.py  kotak_manager.py  live_session.py  main.py  nli.py  parser.py  requirements.txt  telegram_bot.py
server/: __init__.py  kite_manager.py  main.py  models.py  requirements.txt  routes.py
tests/: test_multi_broker.py  test_parser.py  test_telegram.py  test_ui.py
