[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kcli"
version = "0.1.0"
description = "Kite Connect CLI — Multi-account Zerodha trading positions viewer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "KiteCLI Team"},
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "prompt_toolkit>=3.0.36",
    "kiteconnect>=5.0.0",
    "pyotp>=2.9.0",
    "requests>=2.31.0",
    "yfinance>=0.2.0",
]

[project.scripts]
kcli = "cli.main:app"

[project.optional-dependencies]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["cli*"]
